# webc-fcgi

./: AUTHORS  COPYING  ChangeLog  NEWS  README.md  configure.ac  default.doxygen
.github/workflows/: c-cpp.yml
m4/: scanres.m4
src/: Makefile.am
src/examples/simple/: Makefile.am  httpecho.cpp  pingpong.cpp
src/include/: fcgi_request_cpp.hxx
src/lib/: Makefile.am  base64.cpp  fcgi_data.cpp  fcgi_listener.cpp  fcgi_req_parser.cpp  fcgi_request.cpp  fcgi_response.cpp  httpcodes.cpp  multipart.cpp  urlencode.cpp  util.cpp
